--- a/client.html
+++ b/client.html
@@ -149,7 +149,7 @@
                <div class="col-lg-3 col-sm-6">
                   <h1 class="adderss_text">Newsletter</h1>
                   <input type="text" class="Enter_text" placeholder="Enter your Emil" name="Enter your Emil">
-                  <div class="subscribe_bt"><a href="#">Subscribe</a></div>
+                  <div class="subscribe_bt"><a href="#">Nishka</a></div>
                   <div class="social_icon">
                      <ul>
                         <li><a href="#"><img src="images/fb-icon.png"></a></li>
