--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
    <div class="health_section layout_padding">
       <div class="container">
          <h1 class="health_taital">Best Of Health care for you</h1>
-         <p class="health_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis</p>
+         <p class="health_text">hey this is nishka here </p>
          <div class="health_section layout_padding">
             <div class="row">
                <div class="col-sm-7">
