--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                   <a class="nav-link" href="index.html">Home</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="health.html">Health</a>
+                  <a class="nav-link" href="HireHer.html">HireHer</a>
                </li>
                <li class="nav-item">
                   <a class="nav-link" href="medicine.html">Medicine</a>
@@ -94,7 +94,7 @@
                      <div class="row">
                         <div class="col-md-6">
                            <h1 class="banner_taital">Health <br><span style="color: #151515;">Care</span></h1>
-                           <p class="banner_text">There are many variations of passages of Lorem Ipsum</p>
+                           <p class="banner_text">Hi Abhishek is Here</p>
                            <div class="btn_main">
                               <div class="more_bt"><a href="#">Contact Now</a></div>
                               <div class="contact_bt"><a href="#">Get A Quote</a></div>
