--- a/HerAssist.html
+++ b/HerAssist.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>Medicine</title>
+      <title>Contact</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -45,17 +45,17 @@
                   <li class="nav-item">
                      <a class="nav-link" href="HireHer.html">HireHer</a>
                   </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="FemEdify.html">FemEdify</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="SheShield.html">SheShield</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="HerNewHome.html">HerNewHome</a>
+                  </li>
                   <li class="nav-item active">
-                     <a class="nav-link" href="medicine.html">Medicine</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="news.html">News</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="client.html">Client</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="contact.html">Contact Us</a>
+                     <a class="nav-link" href="HerAssist.html">HerAssist</a>
                   </li>
                   <li class="nav-item">
                      <a class="nav-link" href="#"><img src="images/search-icon.png"></a>
@@ -65,21 +65,40 @@
          </nav>
       </div>
       <!-- header section end -->
-      <!-- knowledge section end -->
-      <div class="knowledge_section layout_padding margin_90">
+      <!-- contact section start -->
+      <div class="contact_section layout_padding margin_90">
          <div class="container">
-            <div class="knowledge_main">
-               <div class="left_main">
-                  <h1 class="knowledge_taital">Knowledge of center</h1>
-                  <p class="knowledge_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-               </div>
-               <div class="right_main">
-                  <div class="play_icon"><a href="#"><img src="images/play-icon.png"></a></div>
+            <h1 class="contact_taital">What we do</h1>
+            <div class="news_section_2">
+               <div class="row">
+                  <div class="col-md-6">
+                     <div class="icon_main">
+                        <div class="icon_7"><img src="images/icon-7.png"></div>
+                        <h4 class="diabetes_text">Diabetes and obesity Counselling </h4>
+                     </div>
+                     <div class="icon_main">
+                        <div class="icon_7"><img src="images/icon-5.png"></div>
+                        <h4 class="diabetes_text">Obstetrics and Gynsecology</h4>
+                     </div>
+                     <div class="icon_main">
+                        <div class="icon_7"><img src="images/icon-6.png"></div>
+                        <h4 class="diabetes_text">Surgical and medical Oncology</h4>
+                     </div>
+                  </div>
+                  <div class="col-md-6">
+                     <div class="contact_box">
+                        <h1 class="book_text">Book Appoinment</h1>
+                        <input type="text" class="Email_text" placeholder="Name" name="Name">
+                        <input type="text" class="Email_text" placeholder="Name" name="Name">
+                        <textarea class="massage-bt" placeholder="Massage" rows="5" id="comment" name="Massage"></textarea>
+                        <div class="send_bt"><a href="#">SEND</a></div>
+                     </div>
+                  </div>
                </div>
             </div>
          </div>
       </div>
-      <!-- knowledge section end -->
+      <!-- contact section end -->
       <!-- footer section start -->
       <div class="footer_section layout_padding">
          <div class="container">
