--- a/HireHer.html
+++ b/HireHer.html
@@ -46,16 +46,16 @@
                      <a class="nav-link" href="HireHer.html">HireHer</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="medicine.html">Medicine</a>
+                     <a class="nav-link" href="FemEdify.html">FemEdify</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="news.html">News</a>
+                     <a class="nav-link" href="SheShield.html">SheShield</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="client.html">Client</a>
+                     <a class="nav-link" href="HerNewHome.html">HerNewHome</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="contact.html">Contact Us</a>
+                     <a class="nav-link" href="HerAssist.html">HerAssist</a>
                   </li>
                   <li class="nav-item">
                      <a class="nav-link" href="#"><img src="images/search-icon.png"></a>
