--- a/HerNewHome.html
+++ b/HerNewHome.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>Contact</title>
+      <title>Client</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -46,16 +46,16 @@
                      <a class="nav-link" href="HireHer.html">HireHer</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="medicine.html">Medicine</a>
+                     <a class="nav-link" href="FemEdify.html">FemEdify</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="news.html">News</a>
+                     <a class="nav-link" href="SheShield.html">SheShield</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="client.html">Client</a>
+                     <a class="nav-link" href="HerNewHome.html">HerNewHome</a>
                   </li>
-                  <li class="nav-item active">
-                     <a class="nav-link" href="contact.html">Contact Us</a>
+                  <li class="nav-item">
+                     <a class="nav-link" href="HerAssist.html">HerAssist</a>
                   </li>
                   <li class="nav-item">
                      <a class="nav-link" href="#"><img src="images/search-icon.png"></a>
@@ -65,40 +65,68 @@
          </nav>
       </div>
       <!-- header section end -->
-      <!-- contact section start -->
-      <div class="contact_section layout_padding margin_90">
-         <div class="container">
-            <h1 class="contact_taital">What we do</h1>
-            <div class="news_section_2">
-               <div class="row">
-                  <div class="col-md-6">
-                     <div class="icon_main">
-                        <div class="icon_7"><img src="images/icon-7.png"></div>
-                        <h4 class="diabetes_text">Diabetes and obesity Counselling </h4>
-                     </div>
-                     <div class="icon_main">
-                        <div class="icon_7"><img src="images/icon-5.png"></div>
-                        <h4 class="diabetes_text">Obstetrics and Gynsecology</h4>
-                     </div>
-                     <div class="icon_main">
-                        <div class="icon_7"><img src="images/icon-6.png"></div>
-                        <h4 class="diabetes_text">Surgical and medical Oncology</h4>
+      <!-- client section start -->
+      <div class="client_section layout_padding">
+         <div id="my_slider" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+               <div class="carousel-item active">
+                  <div class="container">
+                     <h1 class="client_taital">What People Say</h1>
+                     <p class="client_text">It is a long established fact that a reader will be distracted </p>
+                     <div class="client_section_2">
+                        <div class="client_left">
+                           <div><img src="images/client-img.png" class="client_img"></div>
+                        </div>
+                        <div class="client_right">
+                           <h3 class="distracted_text">Distracted by</h3>
+                           <p class="lorem_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
+                           <div class="quote_icon"><img src="images/quote-icon.png"></div>
+                        </div>
                      </div>
                   </div>
-                  <div class="col-md-6">
-                     <div class="contact_box">
-                        <h1 class="book_text">Book Appoinment</h1>
-                        <input type="text" class="Email_text" placeholder="Name" name="Name">
-                        <input type="text" class="Email_text" placeholder="Name" name="Name">
-                        <textarea class="massage-bt" placeholder="Massage" rows="5" id="comment" name="Massage"></textarea>
-                        <div class="send_bt"><a href="#">SEND</a></div>
+               </div>
+               <div class="carousel-item">
+                  <div class="container">
+                     <h1 class="client_taital">What People Say</h1>
+                     <p class="client_text">It is a long established fact that a reader will be distracted </p>
+                     <div class="client_section_2">
+                        <div class="client_left">
+                           <div><img src="images/client-img.png" class="client_img"></div>
+                        </div>
+                        <div class="client_right">
+                           <h3 class="distracted_text">Distracted by</h3>
+                           <p class="lorem_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
+                           <div class="quote_icon"><img src="images/quote-icon.png"></div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+               <div class="carousel-item">
+                  <div class="container">
+                     <h1 class="client_taital">What People Say</h1>
+                     <p class="client_text">It is a long established fact that a reader will be distracted </p>
+                     <div class="client_section_2">
+                        <div class="client_left">
+                           <div><img src="images/client-img.png" class="client_img"></div>
+                        </div>
+                        <div class="client_right">
+                           <h3 class="distracted_text">Distracted by</h3>
+                           <p class="lorem_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
+                           <div class="quote_icon"><img src="images/quote-icon.png"></div>
+                        </div>
                      </div>
                   </div>
                </div>
             </div>
+            <a class="carousel-control-prev" href="#my_slider" role="button" data-slide="prev">
+            <i class="fa fa-long-arrow-left" style="font-size:24px; padding-top: 4px;"></i>
+            </a>
+            <a class="carousel-control-next" href="#my_slider" role="button" data-slide="next">
+            <i class="fa fa-long-arrow-right" style="font-size:24px; padding-top: 4px;"></i>
+            </a>
          </div>
       </div>
-      <!-- contact section end -->
+      <!-- client section end -->
       <!-- footer section start -->
       <div class="footer_section layout_padding">
          <div class="container">
@@ -121,7 +149,7 @@
                <div class="col-lg-3 col-sm-6">
                   <h1 class="adderss_text">Newsletter</h1>
                   <input type="text" class="Enter_text" placeholder="Enter your Emil" name="Enter your Emil">
-                  <div class="subscribe_bt"><a href="#">Subscribe</a></div>
+                  <div class="subscribe_bt"><a href="#">Nishka</a></div>
                   <div class="social_icon">
                      <ul>
                         <li><a href="#"><img src="images/fb-icon.png"></a></li>
