--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
    <!-- site metas -->
-   <title>HomeCare</title>
+   <title>femME</title>
    <meta name="keywords" content="">
    <meta name="description" content="">
    <meta name="author" content="">
@@ -41,9 +41,6 @@
          </button>
          <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-               <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Home</a>
-               </li>
                <li class="nav-item">
                   <a class="nav-link" href="HireHer.html">HireHer</a>
                </li>
