--- a/index.html
+++ b/index.html
@@ -34,12 +34,13 @@
 <body>
    <!-- header section start -->
    <div class="header_section">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-         <div class="logo"><a href="index.html"><img src="images/logo.png"></a></div>
+      <div class="navbar navbar-expand-lg navbar-light bg-light">
+         <div class="logo nav-logo"><a href="index.html"><img src="images/logo.png"></a></div>
          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
          </button>
          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="nav-all">
             <ul class="navbar-nav mr-auto">
                <li class="nav-item">
                   <a class="nav-link" href="HireHer.html">HireHer</a>
@@ -61,7 +62,8 @@
                </li>
             </ul>
          </div>
-      </nav>
+         </div>
+      </div>
       <!-- header section end -->
       <!-- banner section start -->
       <div id="main_slider" class="carousel slide" data-ride="carousel">
