--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                            <p class="banner_text">There are many variations of passages of Lorem Ipsum</p>
                            <div class="btn_main">
                               <div class="more_bt"><a href="#">Contact Now</a></div>
-                              <div class="contact_bt"><a href="#">Get A Quote</a></div>
+                              <div class="contact_bt"><a href="#">Get Quote</a></div>
                            </div>
                         </div>
                         <div class="col-md-6">
@@ -93,7 +93,7 @@
                      <div class="row">
                         <div class="col-md-6">
                            <h1 class="banner_taital">Health <br><span style="color: #151515;">Care</span></h1>
-                           <p class="banner_text">Hi Abhishek is Here</p>
+                           <p class="banner_text">Hi</p>
                            <div class="btn_main">
                               <div class="more_bt"><a href="#">Contact Now</a></div>
                               <div class="contact_bt"><a href="#">Get A Quote</a></div>
