--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                   <div class="container">
                      <div class="row">
                         <div class="col-md-6">
-                           <h1 class="banner_taital">Health <br><span style="color: #151515;">Care</span></h1>
+                           <h1 class="banner_taital">H <br><span style="color: #151515;">Care</span></h1>
                            <p class="banner_text">There are many variations of passages of Lorem Ipsum</p>
                            <div class="btn_main">
                               <div class="more_bt"><a href="#">Contact Now</a></div>
