--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                   <a class="nav-link" href="HerAssist.html">HerAssist</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="#"><img src="images/search-icon.png"></a>
+                  <a class="nav-link" href="#"><img src=""></a>
                </li>
             </ul>
          </div>
@@ -73,7 +73,7 @@
                   <div class="container">
                      <div class="row">
                         <div class="col-md-6">
-                           <h1 class="banner_taital">H <br><span style="color: #151515;">Care</span></h1>
+                           <h1 class="banner_taital">FemMe  <br><span style="color: #7c0e61;">Power</span></h1>
                            <p class="banner_text">There are many variations of passages of Lorem Ipsum</p>
                            <div class="btn_main">
                               <div class="more_bt"><a href="#">Contact Now</a></div>
@@ -81,7 +81,7 @@
                            </div>
                         </div>
                         <div class="col-md-6">
-                           <div class="image_1"><img src="images/img-1.png"></div>
+                           <div class="banner-pic"><img src=""></div>
                         </div>
                      </div>
                   </div>
@@ -92,7 +92,7 @@
                   <div class="container">
                      <div class="row">
                         <div class="col-md-6">
-                           <h1 class="banner_taital">Health <br><span style="color: #151515;">Care</span></h1>
+                           <h1 class="banner_taital">FemMe<br><span style="color: #7c0e61;">Power</span></h1>
                            <p class="banner_text">Hi Abhishek is Here</p>
                            <div class="btn_main">
                               <div class="more_bt"><a href="#">Contact Now</a></div>
@@ -100,7 +100,7 @@
                            </div>
                         </div>
                         <div class="col-md-6">
-                           <div class="image_1"><img src="images/img-1.png"></div>
+                           <div class="banner-pic"><img src=""></div>
                         </div>
                      </div>
                   </div>
@@ -111,7 +111,7 @@
                   <div class="container">
                      <div class="row">
                         <div class="col-md-6">
-                           <h1 class="banner_taital">Health <br><span style="color: #151515;">Care</span></h1>
+                           <h1 class="banner_taital">FemMe<br><span style="color: #7c0e61;">Power</span></h1>
                            <p class="banner_text">There are many variations of passages of Lorem Ipsum</p>
                            <div class="btn_main">
                               <div class="more_bt"><a href="#">Contact Now</a></div>
@@ -119,7 +119,7 @@
                            </div>
                         </div>
                         <div class="col-md-6">
-                           <div class="image_1"><img src="images/img-1.png"></div>
+                           <div class="banner-pic"><img src="images/womensday_v2_400.gif"></div>
                         </div>
                      </div>
                   </div>
@@ -194,7 +194,7 @@
             <div class="row">
                <div class="col-lg-4 col-sm-6">
                   <div class="box_main">
-                     <div class="icon_1"><img src="images/icon-2.png"></div>
+                     <div class="icon_1"><img src="images/empower.gif"></div>
                      <h4 class="daily_text">Daily care experts</h4>
                   </div>
                </div>
