--- a/register.html
+++ b/register.html
@@ -9,9 +9,14 @@
 </head>
 <body>
     <main>
-        <div class="login-card">
-        <h2>SIGNIN FORM</h2>
-        <form role="form" onsubmit="signIn(event);" autocomplete="off">
+        <h2>SIGNUP FORM</h2>
+        <form role="form" onsubmit="signUp(event);" autocomplete="off">
+            <div class="form-group">
+                <input type="text" name="fname" id="fname" placeholder="First Name" required>
+            </div>
+            <div class="form-group">
+                <input type="text" name="lname" id="lname" placeholder="Last Name" required>
+            </div>
             <div class="form-group">
                 <input type="email" name="email" id="email" placeholder="Email Address" required>
             </div>
@@ -19,13 +24,12 @@
                 <input type="password" name="pwd" id="pwd" placeholder="Password" required>
             </div>
             <div class="form-group">
-                <button type="submit">Sign In</button>
+                <button type="submit">Sign Up</button>
             </div>
         </form>
-        <p>Don't have an account? <a href="register.html">Sign Up</a> here</p>
-        </div>
+        <p>Already a member? <a href="index.html">Sign In</a></p>
     </main>
 
-    <script type="text/javascript" src="js/login.js"></script>
+    <script type="text/javascript" src="js/login.js"></script
 </body>
 </html>
